browser-sync + hw1.

--- a/hw0/views/index.pug
+++ b/hw0/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block layout-content
   div.View
-    h1.Banner Hello World!
+    h1.Banner Hello World?
     div.Message
       div.Title
         h3 Hello?
