--- a/hw0/views/layout.pug
+++ b/hw0/views/layout.pug
@@ -3,10 +3,11 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    link(rel="shortcut icon", href="/favicon.ico")
+    link(rel="shortcut icon", href="/favicon.ico?")
     meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
     meta(name="theme-color", content="#000000")
     title #{title} | This is title
+    link(rel="stylesheet" href="/style.css")
   body
     div#root
       block layout-content
